Update delete gratis word index.html

--- a/index.html
+++ b/index.html
@@ -1039,7 +1039,7 @@
                     </div>
                 </div>
                 <button class="cta-button" onclick="document.getElementById('generator-header').scrollIntoView({behavior: 'smooth', block: 'start'})">
-                    🚀 CREAR MI RUTINA GRATIS
+                    🚀 CREAR MI RUTINA
                 </button>
             </div>
             <div class="hero-image">
